--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,31 @@
 {
 	"compilerOptions": {
+		// https://doc.babylonjs.com/divingDeeper/developWithBjs/npmSupport
+		// "target": "es5",
+		// "module": "commonjs",
+		// "noResolve": false,
+		// "noImplicitAny": false,
+		// "removeComments": true,
+		// "preserveConstEnums": true,
+		// "experimentalDecorators": true,
+		// "isolatedModules": false,
+		// "lib": [
+		// 	"dom",
+		// 	"es2015.promise",
+		// 	"es5"
+		// ],
+		// "declaration": true,
+		// https://doc.babylonjs.com/divingDeeper/developWithBjs/treeShaking
+		// "module": "esNext",
+		// "target": "es6",
+		// "moduleResolution": "node",
+		// Original
 		"module": "commonjs",
 		"target": "ES2020",
 		"outDir": "out",
 		"lib": [
-			"ES2020"
+			"ES2020",
+			"DOM"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
