--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,19 @@
 			"presentation": {
 				"reveal": "never"
 			},
+			"group": "build"
+		},
+		{
+			"type": "npm",
+			"script": "webpack-dev",
+			"problemMatcher": [
+				"$ts-webpack-watch",
+				"$tslint-webpack-watch"
+			],
+			"isBackground": true,
+			"presentation": {
+				"reveal": "never"
+			},
 			"group": {
 				"kind": "build",
 				"isDefault": true
