--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 		// "target": "es6",
 		// "moduleResolution": "node",
 		// Original
+		"jsx": "react",
 		"module": "commonjs",
 		"target": "ES2020",
 		"outDir": "out",
