loaders for other supported file types

--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
 				"selector": [
 					{
 						"filenamePattern": "*.babylon"
+					},
+					{
+						"filenamePattern": "*.gltf"
+					},
+					{
+						"filenamePattern": "*.glb"
+					},
+					{
+						"filenamePattern": "*.obj"
 					}
 				]
 			}
