--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
 		"@types/vscode-webview": "^1.57.0",
 		"@typescript-eslint/eslint-plugin": "^5.9.1",
 		"@typescript-eslint/parser": "^5.9.1",
+		"@vscode/codicons": "^0.0.28",
 		"@vscode/test-electron": "^2.0.3",
 		"css-loader": "^6.6.0",
 		"eslint": "^8.6.0",
