--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,12 +1,10 @@
 .vscode/**
 .vscode-test/**
-src/**
+node_modules/**
 out/**
+src/**
 static/**
+.eslintrc.json
 .gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
+tsconfig.json
+webpack.config.js
