--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
 		"vscode:prepublish": "npm run package",
 		"webpack": "webpack --mode development",
 		"webpack-dev": "webpack --mode development --watch",
+		"prepackage": "rm -rf ./dist",
 		"package": "webpack --mode production --devtool hidden-source-map",
 		"test-compile": "tsc -p ./",
 		"// generate-schema-types": "TODO: look into a type generator that puts constants into the scope of their respective schema files.",
