--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
 		},
 		{
 			"type": "npm",
-			"script": "webpack-dev",
+			"script": "webpack-watch",
 			"problemMatcher": [
 				"$ts-webpack-watch",
 				"$tslint-webpack-watch"
