--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "babylonjs-viewer",
-	"version": "0.9.3",
+	"version": "0.9.4",
 	"publisher": "bmcbarron",
 	"engines": {
-		"vscode": "^1.64.0"
+		"vscode": "^1.66.0"
 	},
 	"license": "SEE LICENSE in LICENSE.md",
 	"displayName": "Babylon.js Asset Viewer",
@@ -122,42 +122,42 @@
 		"onCustomEditor:babylonjs.assetDigest"
 	],
 	"dependencies": {
-		"@babylonjs/core": "^5.0.0-beta.6",
-		"@babylonjs/gui": "^5.0.0-beta.6",
-		"@babylonjs/inspector": "^5.0.0-beta.6",
-		"@babylonjs/loaders": "^5.0.0-beta.6",
-		"@babylonjs/materials": "^5.0.0-beta.6",
-		"@babylonjs/serializers": "^5.0.0-beta.6",
-		"copy-webpack-plugin": "^10.2.4",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"@babylonjs/core": "5.3.0",
+		"@babylonjs/gui": "5.3.0",
+		"@babylonjs/inspector": "5.3.0",
+		"@babylonjs/loaders": "5.3.0",
+		"@babylonjs/materials": "5.3.0",
+		"@babylonjs/serializers": "5.3.0",
+		"copy-webpack-plugin": "10.2.4",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
 	},
 	"devDependencies": {
-		"@types/glob": "^7.2.0",
-		"@types/mocha": "^9.0.0",
-		"@types/node": "14.x",
-		"@types/vscode": "^1.64.0",
-		"@types/vscode-webview": "^1.57.0",
-		"@typescript-eslint/eslint-plugin": "^5.9.1",
-		"@typescript-eslint/parser": "^5.9.1",
-		"@vscode/codicons": "^0.0.28",
-		"@vscode/test-electron": "^2.0.3",
-		"cross-var": "^1.1.0",
-		"css-loader": "^6.6.0",
-		"eslint": "^8.6.0",
-		"glob": "^7.2.0",
-		"json-schema-to-typescript": "^10.1.5",
-		"mini-css-extract-plugin": "^2.5.3",
-		"mocha": "^9.1.3",
-		"sass": "^1.49.7",
-		"sass-loader": "^12.4.0",
-		"source-map-loader": "^3.0.1",
-		"style-loader": "^3.3.1",
-		"svg-url-loader": "^7.1.1",
-		"ts-loader": "^9.2.6",
-		"typescript": "^4.5.4",
-		"webpack": "^5.68.0",
-		"webpack-cli": "^4.9.2"
+		"@types/glob": "7.2.0",
+		"@types/mocha": "9.1.1",
+		"@types/node": "17.0.27",
+		"@types/vscode": "1.66.0",
+		"@types/vscode-webview": "1.57.0",
+		"@typescript-eslint/eslint-plugin": "5.21.0",
+		"@typescript-eslint/parser": "5.21.0",
+		"@vscode/codicons": "0.0.29",
+		"@vscode/test-electron": "2.1.3",
+		"cross-var": "1.1.0",
+		"css-loader": "6.7.1",
+		"eslint": "8.14.0",
+		"glob": "8.0.1",
+		"json-schema-to-typescript": "10.1.5",
+		"mini-css-extract-plugin": "2.6.0",
+		"mocha": "9.2.2",
+		"sass": "1.51.0",
+		"sass-loader": "12.6.0",
+		"source-map-loader": "3.0.1",
+		"style-loader": "3.3.1",
+		"svg-url-loader": "7.1.1",
+		"ts-loader": "9.2.6",
+		"typescript": "4.6.3",
+		"webpack": "5.72.0",
+		"webpack-cli": "4.9.2"
 	},
 	"scripts": {
 		"compile": "tsc -p ./",
